--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,17 +1,34 @@
 {
   "name": "Band Book",
+  "short_name": "BandBook",
+  "scope": "/",
+  "start_url": "/index.html",
+  "display": "standalone",
+  "background_color": "#6c757d",
+  "theme_color": "#6c757d",
   "icons": [
     {
       "src": "assets/icons/192.png",
-	  "sizes": "192x192",
-	  "type": "image/png"
-	},
-	{
-	  "src": "assets/icons/512.png",
-	  "sizes": "512x512",
-	  "type": "image/png"
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/icons/512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
-  "start_url": "index.html",
-  "display": "standalone"
+  "share_target": {
+    "action": "/add-songs",
+    "method": "POST",
+    "enctype": "multipart/form-data",
+    "params": {
+      "files": [
+        {
+          "name": "audio",
+          "accept": ["audio/*"]
+        }
+      ]
+    }
+  }
 }
